--- a/index.html
+++ b/index.html
@@ -1,55 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Form with Geolocation</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    iframe {
-      width: 100%;
-      height: 600px;
-      border: none;
-    }
-  </style>
+  <title>Get Location</title>
 </head>
 <body>
+  <h2>Find Your Location</h2>
 
-  <iframe width="640px" height="480px" src="https://frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
+  <form id="location-form">
+    <button type="submit">Get My Location</button>
+  </form>
 
-<script>
-    const webhookUrl = "https://script.google.com/macros/s/AKfycbyhGkMQ3blYv9bXioA-2mOECHhoAi06AuXPGXMKftD_7z_3XjtfyiggyZ13l5dLUiVd/exec";
+  <p><strong>Latitude:</strong> <span id="lat"></span></p>
+  <p><strong>Longitude:</strong> <span id="lon"></span></p>
 
-    if ("geolocation" in navigator) {
-      navigator.geolocation.getCurrentPosition(function(position) {
-        const latitude = position.coords.latitude;
-        const longitude = position.coords.longitude;
+  <script>
+    const form = document.getElementById('location-form');
+    const latSpan = document.getElementById('lat');
+    const lonSpan = document.getElementById('lon');
 
-        fetch(webhookUrl, {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(
+          function(position) {
+            latSpan.textContent = position.coords.latitude;
+            lonSpan.textContent = position.coords.longitude;
           },
-          body: JSON.stringify({
-            latitude: latitude,
-            longitude: longitude
-          })
-        })
-        .then(() => console.log("Location sent to Google Sheet"))
-        .catch(error => console.error("Error sending location:", error));
-
-      }, function(error) {
-        console.error("Geolocation error:", error.message);
-      });
-    } else {
-      console.error("Geolocation not supported.");
-    }
+          function(error) {
+            alert("Error getting location: " + error.message);
+          }
+        );
+      } else {
+        alert("Geolocation is not supported by your browser.");
+      }
+    });
   </script>
-
-
-
 </body>
 </html>
