--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       body: JSON.stringify(data),
     });
 
-    alert("Form submitted! Data sent to Google Sheet.");
+    alert("Store Information Saved! Thank you.");
     this.reset();
     submitBtn.disabled = true; // Re-disable until location is reacquired
   });
